fix(tables): style tables better readability

--- a/themes/cactus/source/css/_extend.styl
+++ b/themes/cactus/source/css/_extend.styl
@@ -110,7 +110,9 @@ $base-style
     color: $color-accent-2
     font-weight: bold
     font-size: $font-size - 1px
+    vertical-align: bottom
 
   td
-    padding: 0 8px
+    padding: 8px 4px
     border-bottom: none
+    vertical-align: top
